--- a/package.json
+++ b/package.json
@@ -11,29 +11,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.8",
-    "@angular/cdk": "^11.0.3",
-    "@angular/common": "~11.0.8",
-    "@angular/compiler": "~11.0.8",
-    "@angular/core": "~11.0.8",
-    "@angular/forms": "~11.0.8",
-    "@angular/material": "^11.0.3",
-    "@angular/platform-browser": "~11.0.8",
-    "@angular/platform-browser-dynamic": "~11.0.8",
-    "@angular/router": "~11.0.8",
-    "rxjs": "~6.6.3",
+    "@angular/animations": "^11.0.9",
+    "@angular/cdk": "^11.2.2",
+    "@angular/common": "^11.0.9",
+    "@angular/compiler": "^11.0.9",
+    "@angular/core": "^11.0.9",
+    "@angular/forms": "^11.0.9",
+    "@angular/material": "^11.2.2",
+    "@angular/platform-browser": "^11.0.9",
+    "@angular/platform-browser-dynamic": "^11.0.9",
+    "@angular/router": "^11.0.9",
+    "rxjs": "^6.6.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.6",
-    "@angular/cli": "~11.0.6",
-    "@angular/compiler-cli": "~11.0.8",
-    "@angular/language-service": "~11.0.8",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.6.0",
+    "@angular-devkit/build-angular": "^0.1100.7",
+    "@angular-eslint/builder": "1.2.0",
+    "@angular-eslint/eslint-plugin": "1.2.0",
+    "@angular-eslint/eslint-plugin-template": "1.2.0",
+    "@angular-eslint/schematics": "1.2.0",
+    "@angular-eslint/template-parser": "1.2.0",
+    "@angular/cli": "^11.0.7",
+    "@angular/compiler-cli": "^11.0.9",
+    "@angular/language-service": "^11.0.9",
+    "@types/jasmine": "^3.6.4",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.20.4",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
     "codelyzer": "^6.0.0",
+    "eslint": "^7.6.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "30.7.6",
+    "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -44,17 +55,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.5",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "@angular-eslint/builder": "1.2.0",
-    "@angular-eslint/eslint-plugin": "1.2.0",
-    "@angular-eslint/eslint-plugin-template": "1.2.0",
-    "@angular-eslint/schematics": "1.2.0",
-    "@angular-eslint/template-parser": "1.2.0",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0"
+    "typescript": "^4.0.7"
   }
 }
