--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^12.0.1",
-    "@angular/cdk": "^11.2.2",
+    "@angular/cdk": "^12.0.1",
     "@angular/common": "^12.0.1",
     "@angular/compiler": "^12.0.1",
     "@angular/core": "^12.0.1",
     "@angular/forms": "^12.0.1",
-    "@angular/material": "^11.2.2",
+    "@angular/material": "^12.0.1",
     "@angular/platform-browser": "^12.0.1",
     "@angular/platform-browser-dynamic": "^12.0.1",
     "@angular/router": "^12.0.1",
@@ -28,21 +28,21 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.0.1",
-    "@angular-eslint/builder": "1.2.0",
-    "@angular-eslint/eslint-plugin": "1.2.0",
-    "@angular-eslint/eslint-plugin-template": "1.2.0",
-    "@angular-eslint/schematics": "1.2.0",
-    "@angular-eslint/template-parser": "1.2.0",
+    "@angular-eslint/builder": "^12.0.0",
+    "@angular-eslint/eslint-plugin": "^12.0.0",
+    "@angular-eslint/eslint-plugin-template": "^12.0.0",
+    "@angular-eslint/schematics": "12.0.0",
+    "@angular-eslint/template-parser": "^12.0.0",
     "@angular/cli": "^12.0.1",
     "@angular/compiler-cli": "^12.0.1",
     "@angular/language-service": "^12.0.1",
     "@types/jasmine": "^3.6.4",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.20.4",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@typescript-eslint/eslint-plugin": "4.23.0",
+    "@typescript-eslint/parser": "4.23.0",
     "codelyzer": "^6.0.0",
-    "eslint": "^7.6.0",
+    "eslint": "^7.26.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
