--- a/package.json
+++ b/package.json
@@ -22,24 +22,24 @@
     "@angular/platform-browser": "^13.0.0",
     "@angular/platform-browser-dynamic": "^13.0.0",
     "@angular/router": "^13.0.0",
-    "@swimlane/ngx-charts": "^19.0.1",
+    "@swimlane/ngx-charts": "^19.1.0",
     "rxjs": "^6.6.7",
-    "tslib": "^2.2.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.0.1",
-    "@angular-eslint/builder": "^12.4.1",
-    "@angular-eslint/eslint-plugin": "^12.4.1",
-    "@angular-eslint/eslint-plugin-template": "^12.4.1",
+    "@angular-eslint/builder": "^12.6.1",
+    "@angular-eslint/eslint-plugin": "^12.6.1",
+    "@angular-eslint/eslint-plugin-template": "^12.6.1",
     "@angular-eslint/schematics": "12.4.1",
-    "@angular-eslint/template-parser": "^12.4.1",
+    "@angular-eslint/template-parser": "^12.6.1",
     "@angular/cli": "^13.0.1",
     "@angular/compiler-cli": "^13.0.0",
     "@angular/language-service": "^13.0.0",
-    "@types/jasmine": "^3.7.4",
-    "@types/jasminewd2": "^2.0.9",
-    "@types/node": "^12.20.13",
+    "@types/jasmine": "^3.10.2",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^12.20.37",
     "@typescript-eslint/eslint-plugin": "4.23.0",
     "@typescript-eslint/parser": "4.23.0",
     "codelyzer": "^6.0.2",
@@ -49,12 +49,12 @@
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.2",
+    "karma": "^6.3.8",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.6.0",
-    "postcss": "^8.2.15",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "postcss": "^8.3.11",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
